<resources>
    <string name="app_name">RockPaperScissors</string>

    <string name="activity_main_title">Rock, Paper, Scissors Kotlin</string>
    <string name="activity_history_title">Your Game History</string>

    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="all_time_statistics">Your all time statistics</string>
    <string name="statistics">Win: %d, Draw: %d, Lose: %d</string>

    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="vs">V.S.</string>
</resources>
